<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="#afd742"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_scan"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/contentDescription_mine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_scan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/caption_text_mine"
                    android:textColor="#333333"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_scan"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/caption_explain_mine"
                    android:textColor="#666666"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/textView_scan"
                    app:layout_constraintStart_toStartOf="@id/textView_scan"
                    app:layout_constraintTop_toBottomOf="@id/textView_scan" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="#3bd7bd"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_white"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/contentDescription_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/caption_text_white"
                    android:textColor="#333333"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_white"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/caption_explain_white"
                    android:textColor="#666666"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/textView_white"
                    app:layout_constraintStart_toStartOf="@id/textView_white"
                    app:layout_constraintTop_toBottomOf="@id/textView_white" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="#d99b55"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_black"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/contentDescription_black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/caption_text_black"
                    android:textColor="#333333"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_black"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/caption_explain_black"
                    android:textColor="#666666"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/textView_black"
                    app:layout_constraintStart_toStartOf="@id/textView_black"
                    app:layout_constraintTop_toBottomOf="@id/textView_black" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="#af88e6"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_set"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/contentDescription_set"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/caption_text_set"
                    android:textColor="#333333"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_set"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/caption_explain_set"
                    android:textColor="#666666"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/textView_set"
                    app:layout_constraintStart_toStartOf="@id/textView_set"
                    app:layout_constraintTop_toBottomOf="@id/textView_set" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>