<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/block_percent"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="@drawable/background_block_gray"
        android:padding="0.5dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_rubbish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_constraintGuide_percent="0.9" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/block_rubbish"
            app:layout_constraintEnd_toStartOf="@id/guideLine_rubbish"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/block_file"
            app:layout_constraintEnd_toStartOf="@id/guideLine_file"
            app:layout_constraintStart_toStartOf="@id/guideLine_rubbish" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/block_system"
            app:layout_constraintEnd_toStartOf="@id/guideLine_system"
            app:layout_constraintStart_toStartOf="@id/guideLine_file" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/block_blank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideLine_system" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_count_system"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="3dp"
        app:drawableStartCompat="@drawable/block_system"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_percent"
        app:layout_constraintWidth_percent="0.5"
        tools:text="@string/state_fileCount_system" />

    <TextView
        android:id="@+id/textView_count_blank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="3dp"
        app:drawableStartCompat="@drawable/block_blank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/block_percent"
        app:layout_constraintWidth_percent="0.5"
        tools:text="@string/state_fileCount_blank" />

    <TextView
        android:id="@+id/textView_count_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="3dp"
        app:drawableStartCompat="@drawable/block_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_count_system"
        tools:text="@string/state_fileCount_file" />

    <TextView
        android:id="@+id/textView_count_rubbish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="3dp"
        app:drawableStartCompat="@drawable/block_rubbish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_count_file"
        tools:text="@string/state_fileCount_rubbish" />
</androidx.constraintlayout.widget.ConstraintLayout>